# llms_in_academia

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: 00_all_years.ipynb  00_all_years.py  01i_download_test.ipynb  02_xml_parse_script.py  02i_xml_parse_test.ipynb  03i_explore_section_titles.ipynb  03ii_explore_sections.ipynb  04_data_preprocessing.py  04i_data_preprocessing_test.ipynb  04ii_paper_overview.ipynb  05_word_frequency.py  05i_word_frequency_test.ipynb  05ii_excess_test.ipynb  06_frequency_plots.ipynb  06_group_frequency.py  06i_group_frequency_test.ipynb  07_frequency_plots.ipynb  07_side_plots.ipynb  08_normalization_test.ipynb  09_excess_words_test.ipynb  09i_excess_words_plot.ipynb  09ii_excess_words_cutoff.ipynb  09iii_excess_words_cutoff_non-lemmatized.ipynb  09iv_excess_word_simluation.ipynb  10i_subgroups_country.ipynb  10ii_subgroups_discipline.ipynb  baseline_exploration.ipynb  data_wrangling_test.ipynb  download_pmc.py  download_test.ipynb  section_titles.ipynb  test.ipynb  xml_parse_script.py  xml_parse_test.ipynb
src/: british_spellings.json  count_utils.py  data_utils.py  llms_in_academia.code-workspace  mpl_style.txt  mpl_style_2.txt  pmc_scrape.py  title_versions.py  xml_parse.py
thesis/: 00_questions.tex  01_introduction.aux  01_introduction.tex  02_related_work.aux  02_related_work.tex  03_methods.aux  03_methods.tex  04_results.aux  04_results.tex  05_discussion.aux  05_discussion.tex  101_surveys.tex  A1_surveys.aux  A1_surveys.tex  A2.aux  A2_excesswords.aux  A2_excesswords.tex  A3_.aux  A3_simulation.aux  A3_simulation.tex  (+18 more)
(+3 files in other folders)
