[project]
name = "llms-in-academia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icu>=0.0.1",
    "iso3166>=2.1.1",
    "jupyter>=1.1.1",
    "morfessor>=2.0.6",
    "nc>=1.0.2",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polyglot>=16.7.4",
    "pyarrow>=22.0.0",
    "pycld2>=0.42",
    "pyicu>=2.16",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
